[tool.poetry]
name = "generate-nfts"
version = "0.1.0"
description = ""
authors = ["NajeebShafi <najeeb,shafi@yahoo.com>"]
readme = "README.md"
packages = [{include = "generate_nfts"}]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

